feat: services setup
